@@ -137,6 +137,18 @@ public class PluginManager extends JFrame
 
 	public static final String PROPERTY_PLUGINSET = "plugin-manager.pluginset.path";
 
+	//{{{ pluginRemoved() method
+	/**
+	 * A callback called by the @link ManagePanel} when a plugin is removed.
+	 * In that case, if the plugin had an update, the updated has to remove it,
+	 * and the installer panel has to show the plugin again.
+	 */
+	void pluginRemoved()
+	{
+		updater.updateModel();
+		installer.updateModel();
+	} //}}}
+
 	//{{{ PluginManager constructor
 	private PluginManager(Frame parent)
 	{
